--- a/.eslintignore
+++ b/.eslintignore
@@ -3,3 +3,7 @@ build/*
 public/*
 src/react-app-env.d.ts
 src/serviceWorker.ts
+postcss.config.js
+tailwind.config.js
+src/styles/tailwind.css
+craco.config.js
