--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-spinkit": "^3.0.0",
+    "react-toastify": "^8.0.2",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "swiper": "^7.0.4"
