--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^7.15.3",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-lazyload": "^3.2.0",
     "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
@@ -30,6 +32,8 @@
     "@types/node": "^12.12.51",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/react-lazyload": "^3.1.1",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-spinkit": "^3.0.7",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
