--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@heroicons/react": "^1.0.4",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@tailwindcss/forms": "^0.3.4",
     "axios": "^0.21.4",
     "dayjs": "^1.10.6",
     "jwt-decode": "^3.1.2",
+    "multiselect-react-dropdown": "^2.0.7",
     "node-sass": "^6.0.1",
     "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
