--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.11.2",
     "@tailwindcss/forms": "^0.3.4",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.3",
     "dayjs": "^1.10.6",
     "jwt-decode": "^3.1.2",
     "multiselect-react-dropdown": "^2.0.7",
@@ -19,6 +20,7 @@
     "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
     "react-alice-carousel": "^2.5.1",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^7.15.3",
     "react-lazy-load-image-component": "^1.5.1",
@@ -27,6 +29,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-spinkit": "^3.0.0",
+    "react-swipeable-views": "^0.14.0",
     "react-toastify": "^8.0.2",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
@@ -42,6 +45,7 @@
     "@types/react-lazyload": "^3.1.1",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-spinkit": "^3.0.7",
+    "@types/react-swipeable-views": "^0.13.1",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "autoprefixer": "^9.8.6",
