--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-spinkit": "^3.0.0",
     "react-swipeable-views": "^0.14.0",
     "react-toastify": "^8.0.2",
+    "react-tooltip": "^4.2.21",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "swiper": "^7.0.4"
