--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "react-scroll": "^1.8.4",
     "react-spinkit": "^3.0.0",
     "react-swipeable-views": "^0.14.0",
     "react-toastify": "^8.0.2",
@@ -45,6 +46,7 @@
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-lazyload": "^3.1.1",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-scroll": "^1.8.3",
     "@types/react-spinkit": "^3.0.7",
     "@types/react-swipeable-views": "^0.13.1",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
