--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^7.15.3",
+    "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.1",
     "react-lazyload": "^3.2.0",
     "react-multi-carousel": "^2.6.5",
