--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-alice-carousel": "^2.5.1",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.15.3",
     "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.1",
@@ -36,6 +37,7 @@
     "react-tooltip": "^4.2.21",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.3",
     "swiper": "^7.0.4"
   },
   "devDependencies": {
@@ -44,12 +46,14 @@
     "@types/node": "^12.12.51",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.4",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-lazyload": "^3.1.1",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-scroll": "^1.8.3",
     "@types/react-spinkit": "^3.0.7",
     "@types/react-swipeable-views": "^0.13.1",
+    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "autoprefixer": "^9.8.6",
