--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.5.1",
     "react-lazyload": "^3.2.0",
+    "react-modal-video": "^1.2.8",
     "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
